fixed image link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <img src="natepope.png" width="150" />
+            <img src="images/natepope.png" width="150" />
             <h1>Nathan L. Pope</h1>
             <h3>208-695-6445</h3>
         </header>
