--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
             <h3>208-695-6445</h3>
         </header>
         <section>
+            <h1>Summary</h1>
+            <p>Summary text...</p>
+        </section>
+        <section>
             <h1>Skills</h1>
             <div>
                 <h3>Skill Name</h3>
