--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <img src="img/avatar.png" alt="avatar">
             </div>
             <div id="text-header">
-              <h1>Hello,<br> my name is <span>Kamil</span><sup>24yo</sup> and this is my resume/cv</h1>
+              <h1>Hello,<br> my name is <span>Nate</span><sup>37yo</sup> and this is my resume!</h1>
             </div>
           </div>
         </div>
@@ -37,9 +37,9 @@
             <h2>Education</h2>
             <ul id="education" class="clearfix">
               <li>
-                <div class="year pull-left">1990</div>
+                <div class="year pull-left">1979</div>
                 <div class="description pull-right">
-                  <h3>I was born in Katowice</h3>
+                  <h3>I was born in Boise, Idaho</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, exercitationem, totam, dolores iste dolore est aut modi.</p>
                 </div>
               </li>
@@ -97,26 +97,26 @@
             <h2>Contact</h2>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-phone fa-fw"></span></div>
-              <div class="title only pull-right">500 345 242</div>
+              <div class="title only pull-right">208 695 6445</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-envelope fa-fw"></span></div>
-              <div class="title only pull-right">office@kamsolutions.pl</div>
+              <div class="title only pull-right"><a href="mailto:nate@pixopro.com">nate@pixopro.com<</a>/div>
+            </div>
+            <div class="contact-item">
+              <div class="icon pull-left text-center"><span class="fa fa-link fa-fw"></span></div>
+              <div class="title pull-right">Website</div>
+              <div class="description pull-right">https://www.pixopro.com</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-twitter fa-fw"></span></div>
               <div class="title pull-right">Twitter</div>
-              <div class="description pull-right">https://twitter.com/WordPress</div>
+              <div class="description pull-right">https://twitter.com/pixopro</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-facebook fa-fw"></span></div>
               <div class="title pull-right">Facebook</div>
-              <div class="description pull-right">https://www.facebook.com/facebook</div>
-            </div>
-            <div class="contact-item">
-              <div class="icon pull-left text-center"><span class="fa fa-skype fa-fw"></span></div>
-              <div class="title pull-right">Skype</div>
-              <div class="description pull-right">kamsolutions.pl</div>
+              <div class="description pull-right">https://www.facebook.com/pixopro</div>
             </div>
           </div>
           <!-- SKILLS -->
@@ -125,9 +125,9 @@
             <div class="skills">
               <div class="item-skills" data-percent="1.00">HTML</div>
               <div class="item-skills" data-percent="0.90">CSS</div>
-              <div class="item-skills" data-percent="0.80">jQuery</div>
-              <div class="item-skills" data-percent="0.75">PHP</div>
-              <div class="item-skills" data-percent="0.25">Laravel 2 (framework)</div>
+              <div class="item-skills" data-percent="0.20">jQuery</div>
+              <div class="item-skills" data-percent="0.75">Photoshop</div>
+              <div class="item-skills" data-percent="0.85">Illustrator</div>
               <div class="skills-legend clearfix">
                 <div class="legend-left legend">Beginner</div>
                 <div class="legend-left legend"><span>Proficient</span></div>
