--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-envelope fa-fw"></span></div>
-              <div class="title only pull-right"><a href="mailto:nate@pixopro.com">nate@pixopro.com<</a>/div>
+              <div class="title only pull-right"><a href="mailto:nate@pixopro.com">nate@pixopro.com<</a></div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-link fa-fw"></span></div>
@@ -121,13 +121,13 @@
           </div>
           <!-- SKILLS -->
           <div class="box">
-            <h2>Skills</h2>
+            <h2>Design Software</h2>
             <div class="skills">
-              <div class="item-skills" data-percent="1.00">HTML</div>
-              <div class="item-skills" data-percent="0.90">CSS</div>
-              <div class="item-skills" data-percent="0.20">jQuery</div>
               <div class="item-skills" data-percent="0.75">Photoshop</div>
               <div class="item-skills" data-percent="0.85">Illustrator</div>
+              <div class="item-skills" data-percent="0.80">After Effects</div>
+              <div class="item-skills" data-percent="0.90">InDesign</div>
+              <div class="item-skills" data-percent="1.00">Fireworks</div>
               <div class="skills-legend clearfix">
                 <div class="legend-left legend">Beginner</div>
                 <div class="legend-left legend"><span>Proficient</span></div>
@@ -138,18 +138,22 @@
           </div>
           <!-- LANGUAGES -->
           <div class="box">
-            <h2>Languages</h2>
+            <h2>Programming Languages</h2>
             <div id="language-skills">
-              <div class="skill">Polish <div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
-              <div class="skill">English <div class="icons pull-right"><div style="width: 60%;" class="icons-red"></div></div></div>
+              <div class="skill">JavaScript <div class="icons pull-right"><div style="width: 30%;" class="icons-red"></div></div></div>
+              <div class="skill">JQuery <div class="icons pull-right"><div style="width: 20%;" class="icons-red"></div></div></div>
+              <div class="skill">Angular JS <div class="icons pull-right"><div style="width: 20%;" class="icons-red"></div></div></div>
             </div>
           </div>
           <!-- HOBBIES -->
           <div class="box">
-            <h2>Hobbies</h2>
-            <div class="hobby">Photography</div>
-            <div class="hobby">Fitness</div>
-            <div class="hobby">Programming</div>
+            <h2>Knowledge</h2>
+            <div class="hobby">Brand Marketing</div>
+            <div class="hobby">Brand Design</div>
+            <div class="hobby">Web Development</div>
+            <div class="hobby">Internet Marketing</div>
+            <div class="hobby">Digital Design</div>
+            <div class="hobby">Responsive Design</div>
           </div>
         </div>
       </div>
