--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-envelope fa-fw"></span></div>
-              <div class="title only pull-right"><a href="mailto:nate@pixopro.com">nate@pixopro.com<</a></div>
+              <div class="title only pull-right"><a href="mailto:nate@pixopro.com">nate@pixopro.com</a></div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-link fa-fw"></span></div>
@@ -127,7 +127,6 @@
               <div class="item-skills" data-percent="0.85">Illustrator</div>
               <div class="item-skills" data-percent="0.80">After Effects</div>
               <div class="item-skills" data-percent="0.90">InDesign</div>
-              <div class="item-skills" data-percent="1.00">Fireworks</div>
               <div class="skills-legend clearfix">
                 <div class="legend-left legend">Beginner</div>
                 <div class="legend-left legend"><span>Proficient</span></div>
