--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <img src="img/avatar.png" alt="avatar">
             </div>
             <div id="text-header">
-              <h1>Hello,<br> my name is <span>Nate</span><sup>37yo</sup> and this is my resume!</h1>
+              <h1>Hello,<br> my name is <span>Nate</span><sup>37</sup> and this is my resume!</h1>
             </div>
           </div>
         </div>
@@ -44,24 +44,17 @@
                 </div>
               </li>
               <li>
-                <div class="year pull-left">2005</div>
+                <div class="year pull-left">1997</div>
                 <div class="description pull-right">
-                  <h3>Secondary school specializing in artistic</h3>
+                  <h3>ITT Technical Institute</h3>
                   <p>Eos, explicabo, nam, tenetur et ab eius deserunt aspernatur ipsum ducimus quibusdam quis voluptatibus.</p>
                 </div>
               </li>
               <li>
-                <div class="year pull-left">2009</div>
+                <div class="year pull-left">1999</div>
                 <div class="description pull-right">
-                  <h3>First level graduation in Graphic Design</h3>
+                  <h3>Boise State University</h3>
                   <p>Aspernatur, mollitia, quos maxime eius suscipit sed beatae ducimus quaerat quibusdam perferendis? Iusto, quibusdam asperiores unde repellat.</p>
-                </div>
-              </li>
-              <li>
-                <div class="year pull-left">2012</div>
-                <div class="description pull-right">
-                  <h3>Second level graduation in Graphic Design</h3>
-                  <p>Ducimus, aliquam tempore autem itaque et accusantium!</p>
                 </div>
               </li>
             </ul>
@@ -71,25 +64,34 @@
             <h2>Experiences</h2>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where">Google</div>
-                <div class="year">2013 - 2014</div>
+                <div class="where">PIXOPRO</div>
+                <div class="year">2016 - Current</div>
               </div>
               <div class="col-xs-9">
-                <div class="profession">Front-end developer / php programmer</div>
-                <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, et, illum perferendis veritatis velit sunt similique qui magni totam harum tempore eius laboriosam accusantium necessitatibus voluptatum? Enim, itaque dignissimos quia.</div>
-              </div>
-            </div>
-            <div class="job clearfix">
-              <div class="col-xs-3">
-                <div class="where">Twitter</div>
-                <div class="year">2012</div>
-              </div>
-              <div class="col-xs-9">
-                <div class="profession">Web Developer</div>
-                <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, nihil sit nemo voluptatem praesentium. Quia, qui facere consectetur libero asperiores fugiat consequuntur deserunt culpa repudiandae sed quidem voluptas explicabo soluta.</div>
+                <div class="profession">Creative Mind</div>
+                <div class="description">
+                  <p>PIXOPRO is a newly formed creative agency founded and staffed by branding experts experienced in multiple disciplines.</p>
+                  <p>As your Design + Build shop, we will strive to streamline the essential connections required to continue bringing your companys’ products or services to the valued customers you have currently, while also expanding your exposure to a potentially far vaster audience.</p>
+                  <p>At PIXOPRO we bring your brand decision makers together with our subject matter curators, to form collaborative relationships grounded in professional respect and trust. Our in- house creative and technical teams, along with the peer-to-peer counsel we provide will help define, energize, and ultimately propel your brand to success.</p>
+                  <p>Meeting challenges and opportunities with focused skill and innovation is our guiding principle.</p>
+                </div>
               </div>
             </div>
           </div>
+            <div class="job clearfix">
+              <div class="col-xs-3">
+                <div class="where">Neoreef</div>
+                <div class="year">2007 - 2016</div>
+              </div>
+              <div class="col-xs-9">
+                <div class="profession">Creative Director</div>
+                <div class="description">
+                  <p>Charged with determining the best ways to visually represent identities online. Very much a people-oriented job, involving development of high-level concepts for design projects. Involves working with clients, pitching designs, and understanding client needs. At times, required to develop visual designs, and at other times, responsible for recruiting and managing internal design resources.</p>
+                  <p>Design and built out HTML skins for over 400 client websites. Lead creative sessions for project kick-offs. Manage multiple projects simultaneously from concept through completion. Develop creative strategies and design concepts that meet the business objectives of the organizations brand strategy. Establish creative direction for the entire line of online services and programs.</p>
+                  <p>Supervise and inspire the creative team and provide quality control over concepts and projects.</p>
+                </div>
+              </div>
+            </div>
         </div>
         <div class="col-xs-12 col-sm-5">
           <!-- CONTACT -->
@@ -101,7 +103,7 @@
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-envelope fa-fw"></span></div>
-              <div class="title only pull-right"><a href="mailto:nate@pixopro.com">nate@pixopro.com</a></div>
+              <div class="title only pull-right">nate@pixopro.com</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-link fa-fw"></span></div>
