--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <img src="img/avatar.png" alt="avatar">
             </div>
             <div id="text-header">
-              <h1>Hello,<br> my name is <span>Nate</span><sup>37</sup> and this is my resume!</h1>
+              <h1>Hello,<br> my name is <span>Nathan Pope</span><sup>Nate</sup> and this is my resume!</h1>
             </div>
           </div>
         </div>
