--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
               <div class="description pull-right">https://www.facebook.com/pixopro</div>
             </div>
           </div>
-          <!-- SKILLS -->
+          <!-- SOFTWARE -->
           <div class="box">
-            <h2>Design Software</h2>
+            <h2>Graphic Design</h2>
             <div class="skills">
               <div class="item-skills" data-percent="0.75">Photoshop</div>
               <div class="item-skills" data-percent="0.85">Illustrator</div>
@@ -130,13 +130,31 @@
               </div>
             </div>
           </div>
-          <!-- LANGUAGES -->
+          <!-- PROGRAMMING -->
           <div class="box">
-            <h2>Programming Languages</h2>
+            <h2>Frontend Developer</h2>
+            <div class="skills">
+              <div class="item-skills" data-percent="0.25">JavaScript</div>
+              <div class="item-skills" data-percent="0.15">JQuery</div>
+              <div class="item-skills" data-percent="0.00">Angular JS</div>
+              <div class="skills-legend clearfix">
+                <div class="legend-left legend">Beginner</div>
+                <div class="legend-left legend"><span>Proficient</span></div>
+                <div class="legend-right legend"><span>Expert</span></div>
+                <div class="legend-right legend">Master</div>
+              </div>
+            </div>
+          </div>
+          <!-- KNOWLEDGE -->
+          <div class="box">
+            <h2>Knowledge</h2>
             <div id="language-skills">
-              <div class="skill">JavaScript <div class="icons pull-right"><div style="width: 30%;" class="icons-red"></div></div></div>
-              <div class="skill">JQuery <div class="icons pull-right"><div style="width: 20%;" class="icons-red"></div></div></div>
-              <div class="skill">Angular JS <div class="icons pull-right"><div style="width: 20%;" class="icons-red"></div></div></div>
+              <div class="skill">Brand Marketing <div class="icons pull-right"><div style="width: 100%;" class="icons-red"></div></div></div>
+              <div class="skill">Brand Design <div class="icons pull-right"><div style="width: 100%;" class="icons-red"></div></div></div>
+              <div class="skill">Web Development <div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
+              <div class="skill">Internet Marketing <div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
+              <div class="skill">Digital Design <div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
+              <div class="skill">Responsive Design <div class="icons pull-right"><div style="width: 100%;" class="icons-red"></div></div></div>
             </div>
           </div>
           <!-- HOBBIES -->
