--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
             <h2>Experiences</h2>
             <div class="job clearfix">
               <div class="col-xs-3">
+                <div class="where">Boise Code Works</div>
+                <div class="year">2017</div>
+              </div>
+              <div class="col-xs-9">
+                <div class="profession">Web Foundations</div>
+                <div class="description">
+                  <p>With the ever-growing demand for mobile-optimized web applications, responsive design is one of the most important concepts for any front-end developer to understand. In this course you will learn the most current techniques in CSS, JavaScript and BootStrap. Leveraging Google’s JS Framework Angular, you will build functioning, mobile-ready web applications.</p>
+                </div>
+              </div>
+            </div>
+            <div class="job clearfix">
+              <div class="col-xs-3">
                 <div class="where">PIXOPRO</div>
                 <div class="year">2016 - Current</div>
               </div>
