--- a/index.html
+++ b/index.html
@@ -161,23 +161,18 @@
           <div class="box">
             <h2>Knowledge</h2>
             <div id="language-skills">
-              <div class="skill">Brand Marketing <div class="icons pull-right"><div style="width: 100%;" class="icons-red"></div></div></div>
-              <div class="skill">Brand Design <div class="icons pull-right"><div style="width: 100%;" class="icons-red"></div></div></div>
+              <div class="skill">Brand Marketing <div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
+              <div class="skill">Brand Design <div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
               <div class="skill">Web Development <div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
-              <div class="skill">Internet Marketing <div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
-              <div class="skill">Digital Design <div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
-              <div class="skill">Responsive Design <div class="icons pull-right"><div style="width: 100%;" class="icons-red"></div></div></div>
+              <div class="skill">Internet Marketing <div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
+              <div class="skill">Digital Design <div class="icons pull-right"><div style="width: 75%;" class="icons-red"></div></div></div>
+              <div class="skill">Responsive Design <div class="icons pull-right"><div style="width: 85%;" class="icons-red"></div></div></div>
             </div>
           </div>
-          <!-- HOBBIES -->
+          <!-- INTERESTS -->
           <div class="box">
-            <h2>Knowledge</h2>
-            <div class="hobby">Brand Marketing</div>
-            <div class="hobby">Brand Design</div>
+            <h2>Interests</h2>
             <div class="hobby">Web Development</div>
-            <div class="hobby">Internet Marketing</div>
-            <div class="hobby">Digital Design</div>
-            <div class="hobby">Responsive Design</div>
           </div>
         </div>
       </div>
