--- a/index.html
+++ b/index.html
@@ -37,18 +37,6 @@
             <h2>Experiences</h2>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where">Boise Code Works</div>
-                <div class="year">2017</div>
-              </div>
-              <div class="col-xs-9">
-                <div class="profession">Web Foundations</div>
-                <div class="description">
-                  <p>With the ever-growing demand for mobile-optimized web applications, responsive design is one of the most important concepts for any front-end developer to understand. In this course you will learn the most current techniques in CSS, JavaScript and BootStrap. Leveraging Google’s JS Framework Angular, you will build functioning, mobile-ready web applications.</p>
-                </div>
-              </div>
-            </div>
-            <div class="job clearfix">
-              <div class="col-xs-3">
                 <div class="where">PIXOPRO</div>
                 <div class="year">2016 - Current</div>
               </div>
@@ -82,10 +70,10 @@
             <h2>Education</h2>
             <ul id="education" class="clearfix">
               <li>
-                <div class="year pull-left">1997</div>
+                <div class="year pull-left">2017</div>
                 <div class="description pull-right">
-                  <h3>ITT Technical Institute</h3>
-                  <p>Eos, explicabo, nam, tenetur et ab eius deserunt aspernatur ipsum ducimus quibusdam quis voluptatibus.</p>
+                  <h3>Boise Code Works</h3>
+                  <p>With the ever-growing demand for mobile-optimized web applications, responsive design is one of the most important concepts for any front-end developer to understand. In this course you will learn the most current techniques in CSS, JavaScript and BootStrap. Leveraging Google’s JS Framework Angular, you will build functioning, mobile-ready web applications.</p>
                 </div>
               </li>
               <li>
@@ -93,6 +81,13 @@
                 <div class="description pull-right">
                   <h3>Boise State University</h3>
                   <p>Aspernatur, mollitia, quos maxime eius suscipit sed beatae ducimus quaerat quibusdam perferendis? Iusto, quibusdam asperiores unde repellat.</p>
+                </div>
+              </li>
+              <li>
+                <div class="year pull-left">1997</div>
+                <div class="description pull-right">
+                  <h3>ITT Technical Institute</h3>
+                  <p>Eos, explicabo, nam, tenetur et ab eius deserunt aspernatur ipsum ducimus quibusdam quis voluptatibus.</p>
                 </div>
               </li>
             </ul>
