--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <h2>Contact</h2>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-phone fa-fw"></span></div>
-              <div class="title only pull-right">208 695 6445</div>
+              <div class="title only pull-right">+1 (208) 695-6445</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-envelope fa-fw"></span></div>
