html and css changes

--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
           <div class="box">
             <h2>Frontend Developer</h2>
             <div class="skills">
-              <div class="item-skills" data-percent="0.35">JavaScript</div>
-              <div class="item-skills" data-percent="0.25">JQuery</div>
-              <div class="item-skills" data-percent="0.15">Angular JS</div>
+              <div class="item-skills2" data-percent="0.35">JavaScript</div>
+              <div class="item-skills2" data-percent="0.25">JQuery</div>
+              <div class="item-skills2" data-percent="0.15">Angular JS</div>
               <div class="skills-legend clearfix">
                 <div class="legend-left legend">Beginner</div>
                 <div class="legend-left legend"><span>Proficient</span></div>
@@ -157,10 +157,10 @@
             <h2>Knowledge</h2>
             <div id="language-skills">
               <div class="skill">Brand Marketing <div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
-              <div class="skill">Brand Design <div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
+              <div class="skill">Brand Design <div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
               <div class="skill">Web Development <div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
-              <div class="skill">Internet Marketing <div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
-              <div class="skill">Digital Design <div class="icons pull-right"><div style="width: 75%;" class="icons-red"></div></div></div>
+              <div class="skill">Internet Marketing <div class="icons pull-right"><div style="width: 70%;" class="icons-red"></div></div></div>
+              <div class="skill">Digital Design <div class="icons pull-right"><div style="width: 65%;" class="icons-red"></div></div></div>
               <div class="skill">Responsive Design <div class="icons pull-right"><div style="width: 85%;" class="icons-red"></div></div></div>
             </div>
           </div>
