--- a/index.html
+++ b/index.html
@@ -107,18 +107,15 @@
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-link fa-fw"></span></div>
-              <div class="title pull-right">Website</div>
-              <div class="description pull-right">https://www.pixopro.com</div>
+              <div class="title pull-right">https://www.pixopro.com</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-twitter fa-fw"></span></div>
-              <div class="title pull-right">Twitter</div>
-              <div class="description pull-right">https://twitter.com/pixopro</div>
+              <div class="title pull-right">twitter.com/pixopro</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-facebook fa-fw"></span></div>
-              <div class="title pull-right">Facebook</div>
-              <div class="description pull-right">https://www.facebook.com/pixopro</div>
+              <div class="title pull-right">facebook.com/pixopro</div>
             </div>
           </div>
           <!-- SOFTWARE -->
