--- a/index.html
+++ b/index.html
@@ -107,15 +107,15 @@
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-link fa-fw"></span></div>
-              <div class="title pull-right">https://www.pixopro.com</div>
+              <div class="title only pull-right">https://www.pixopro.com</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-twitter fa-fw"></span></div>
-              <div class="title pull-right">twitter.com/pixopro</div>
+              <div class="title only pull-right">twitter.com/pixopro</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-facebook fa-fw"></span></div>
-              <div class="title pull-right">facebook.com/pixopro</div>
+              <div class="title only pull-right">facebook.com/pixopro</div>
             </div>
           </div>
           <!-- SOFTWARE -->
