html text change

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-link fa-fw"></span></div>
-              <div class="title only pull-right">https://www.pixopro.com</div>
+              <div class="title only pull-right">www.pixopro.com</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-twitter fa-fw"></span></div>
