--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
           </div>
           <!-- SOFTWARE -->
           <div class="box">
-            <h2>Graphic Design</h2>
+            <h2>Design</h2>
             <div class="skills">
               <div class="item-skills" data-percent="0.75">Photoshop</div>
               <div class="item-skills" data-percent="0.85">Illustrator</div>
               <div class="item-skills" data-percent="0.80">After Effects</div>
               <div class="item-skills" data-percent="0.90">InDesign</div>
             </div>
-            <h2>Frontend Developer</h2>
+            <h2>Developer</h2>
             <div class="skills">
               <div class="item-skills skills-black" data-percent="0.35">JavaScript</div>
               <div class="item-skills skills-black" data-percent="0.25">JQuery</div>
