--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <img src="img/avatar.png" alt="avatar">
             </div>
             <div id="text-header">
-              <h1>Hello,<br> my name is <span>Nathan Pope</span><sup>Nate</sup> and this is my resume!</h1>
+              <h1>Hello,<br> my name is <span>Nathan Pope</span><sup>(N8)</sup> and this is my resume!</h1>
             </div>
           </div>
         </div>
@@ -156,6 +156,16 @@
           <div class="box">
             <h2>Interests</h2>
             <div class="hobby">Web Development</div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div id="quote-footer" class="text-center">
+            <!-- QUOTE -->
+            <div id="text-footer">
+              <h1><sup>“</sup>Design is not just what it looks like and feels like. Design is how it works.<sup>“</sup><br><span>–Steve Jobs</span></h1>
+            </div>
           </div>
         </div>
       </div>
