--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <div id="quote-footer" class="text-center">
             <!-- QUOTE -->
             <div id="text-footer">
-              <h1><sup>“</sup>Design is not just what it looks like and feels like. Design is how it works.<sup>“</sup><br><span>–Steve Jobs</span></h1>
+              <h1><strong>“</strong>Design is not just what it looks like and feels like. Design is how it works.<strong>“</strong><br><span>–Steve Jobs</span></h1>
             </div>
           </div>
         </div>
