--- a/index.html
+++ b/index.html
@@ -155,7 +155,11 @@
           <!-- INTERESTS -->
           <div class="box">
             <h2>Interests</h2>
+            <div class="hobby">Graphic Design</div>
             <div class="hobby">Web Development</div>
+            <div class="hobby">Adobe CC</div>
+            <div class="hobby">Responsive Websites</div>
+            <div class="hobby">Twitter Bootstrap</div>
           </div>
         </div>
       </div>
