about me section added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <img src="img/avatar.png" alt="avatar">
             </div>
             <div id="text-header">
-              <h1>Hello,<br> my name is <span>Nathan Pope</span><sup>(N8)</sup> and this is my resume!</h1>
+              <h1>Hello,<br> my name is <span>Nathan Pope</span><sup> N8</sup> and this is my resume!</h1>
             </div>
           </div>
         </div>
@@ -30,7 +30,7 @@
           <!-- ABOUT ME -->
           <div class="box">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, non, dolorem, cumque distinctio magni quam expedita velit laborum sunt amet facere tempora ut fuga aliquam ad asperiores voluptatem dolorum! Quasi.</p>
+            <p>I am an award winning designer and creative director. My work explores the areas where Brand and UX design merge. After more than a decade of agency life I decided it was time to sample life as an entrepreneur. I am now the owner and creative mind behind PIXOPRO Marketing Agency. Meeting challenges and opportunities with focused skill and innovation is my guiding principle.</p>
           </div>
           <!-- EDUCATION -->
           <div class="box">
@@ -40,21 +40,21 @@
                 <div class="year pull-left">2017</div>
                 <div class="description pull-right">
                   <h3>Boise Code Works</h3>
-                  <p>With the ever-growing demand for mobile-optimized web applications, responsive design is one of the most important concepts for any front-end developer to understand. In this course you will learn the most current techniques in CSS, JavaScript and BootStrap. Leveraging Google’s JS Framework Angular, you will build functioning, mobile-ready web applications.</p>
+                  <p>Web Development</p>
                 </div>
               </li>
               <li>
                 <div class="year pull-left">1999</div>
                 <div class="description pull-right">
                   <h3>Boise State University</h3>
-                  <p>Aspernatur, mollitia, quos maxime eius suscipit sed beatae ducimus quaerat quibusdam perferendis? Iusto, quibusdam asperiores unde repellat.</p>
+                  <p>Electrical Engineering Technologies/Technicians</p>
                 </div>
               </li>
               <li>
                 <div class="year pull-left">1997</div>
                 <div class="description pull-right">
                   <h3>ITT Technical Institute</h3>
-                  <p>Eos, explicabo, nam, tenetur et ab eius deserunt aspernatur ipsum ducimus quibusdam quis voluptatibus.</p>
+                  <p>Electrical Engineering and Technology</p>
                 </div>
               </li>
             </ul>
